# quantpy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.ipynb_checkpoints/: test-checkpoint.py
quantpy/: __init__.py  gene_effect.py  joint_scale.py  latex.py  stats.py  vis.py
