[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# Project settings -----------------------------------------------------------------------------------------------------
[project]
name = "quantpy"
dynamic = ["version"]
description = "quantpy: A python package for quantitative genetics."
readme = "README.md"
requires-python = ">=3.8"
license = { "text" = "MIT" }
keywords = ["Quantitative Genetics", "Stats"]
authors = [{ name = "RuLei Chen", email = 'chenrulei@cemps.ac.cn' }]
maintainers = [{ name = "RuLei Chen", email = 'chenrulei@cemps.ac.cn' }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: POSIX :: Linux",
]

# Required dependencies ------------------------------------------------------------------------------------------------
dependencies = ["matplotlib", "numpy", "pandas", "scipy", "setuptools", "tqdm"]

# Optional dependencies ------------------------------------------------------------------------------------------------
[project.optional-dependencies]
dev = [
  "ipython",
  "ipykernel",
  "check-manifest",
  "pre-commit",
  "pytest",
  "pytest-cov",
  "coverage[toml]",
  "mkdocs-material",
  "mkdocstrings[python]",
]

# Tools settings -------------------------------------------------------------------------------------------------------
[tool.setuptools] # configuration specific to the `setuptools` build backend.
packages = { find = { where = ["."], include = ["quantpy", "quantpy.*"] } }
# package-data = { "phenax" = ["configs/*"] }

[tool.setuptools.dynamic]
version = { attr = "quantpy.__version__" }

[tool.pytest]
norecursedirs = [".git", "dist", "build"]
addopts = "--doctest-modules --durations=30 --color=yes"

[tool.coverage.run]
source = ["quantpy/"]
data_file = "tests/.coverage"

[tool.ruff]
line-length = 79

[tool.docformatter]
wrap-summaries = 79
wrap-descriptions = 79
in-place = true
pre-summary-newline = true
close-quotes-on-newline = true

[tool.codespell]
ignore-words-list = "create,nd,ned,strack,data,and,segue,fo,ghoul,win,commend,block,name,after all"
skip = '*.pt,*.pth,*.torchscript,*.onnx,*.tflite,*.pb,*.bin,*.param,*.mlmodel,*.engine,*.npy,*.data*,*.csv,*pnnx*,*venv*,*translat*,__pycache__*,*.ico,*.jpg,*.png,*.mp4,*.mov,/runs,/.git,./docs/??/*.md,./docs/mkdocs_??.yml'
